WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123067
APICast.h uses functions from JSCJSValueInlines.h, but doesn't include it
https://bugs.webkit.org/show_bug.cgi?id=123067
Summary
APICast.h uses functions from JSCJSValueInlines.h, but doesn't include it
Alexey Proskuryakov
Reported
2013-10-19 13:26:09 PDT
I got linker errors when trying to use toJS in DumpRenderTree. Turns out that APICast.h uses functions from JSCJSValueInlines.h, but doesn't include it.
Attachments
proposed patch
(980 bytes, patch)
2013-10-19 13:27 PDT
,
Alexey Proskuryakov
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-10-19 13:27:28 PDT
Created
attachment 214665
[details]
proposed patch
Geoffrey Garen
Comment 2
2013-10-19 13:28:44 PDT
Comment on
attachment 214665
[details]
proposed patch r=me
Alexey Proskuryakov
Comment 3
2013-10-19 14:54:40 PDT
Committed
r157684
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug