APICast.h uses functions from JSCJSValueInlines.h, but doesn't include it https://bugs.webkit.org/show_bug.cgi?id=123067

Reviewed by Geoffrey Garen.

* API/APICast.h: Include it.



Canonical link: https://commits.webkit.org/141145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157684 268f45cc-cd09-0410-ab3c-d52691b4dbfc